--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "pic02.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
-      "src": "IMG_7422.jpg",
-      "type": "image/jpg",
+      "src": "pic02.png",
+      "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "IMG_7422.jpg",
-      "type": "image/jpg",
+      "src": "pic02.png",
+      "type": "image/png",
       "sizes": "512x512"
     }
   ],
