--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.1.3",
     "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
